force-app/main/default/objects/Order_BOA_Relationship__c/fields/Benefit_Order_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Order_Allocation__c</fullName>
    <label>Benefit Order Allocation</label>
    <referenceTo>Benefit_Order_Allocation__c</referenceTo>
    <relationshipLabel>Order BOA Relationships</relationshipLabel>
    <relationshipName>Order_BOA_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>