force-app/main/default/objects/Order_BOA_Relationship__c/fields/Order_Inactive_Employee_Count_Formula__c.field-meta.xml
<CustomField>
    <fullName>Order_Inactive_Employee_Count_Formula__c</fullName>
    <formula>Orders__r.Inactive_Employee_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Inactive Employee Count Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>