force-app/main/default/objects/Order_BOA_Relationship__c/fields/Orders__c.field-meta.xml
<CustomField>
    <fullName>Orders__c</fullName>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Order BOA Relationships</relationshipLabel>
    <relationshipName>Order_BOA_Relationships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>